--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 					<div id="intro">
 						<h1>Portfolio<br />
 						</h1>
-						<p>by <a href="https://www.linkedin.com/in/bryan-torres-7956b8279/">Bryan Torres</a> <br />
-						a recent graduate ready to start a career in data analysis</a>.</p>
+						<p>for <a href="https://www.linkedin.com/in/bryan-torres-7956b8279/">Bryan Torres</a> <br />
+						Recent Graduate Seeking to Launch a Data Analysis Career</a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -30,7 +30,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Bryan Torres</a>
+						<a href="index.html" class="logo">Home</a>
 					</header>
 
 				<!-- Nav -->
@@ -54,8 +54,7 @@
 								<header class="major">
 									<h2><a href="https://github.com/BrainTea/PortfolioProjects/blob/main/Data%20Cleaning%20Project.sql">Project 1:<br />
 									Data Cleaning with SQL</a></h2>
-									<p>With Nashville Housing data, I used SQL to remove inconsistencies, errors, and 
-										duplicates to help with better readability and further use of the data.
+									<p>Enhanced Data Quality and Usability for Nashville Housing Dataset.
 									</p>
 								</header>
 								<a href="https://github.com/BrainTea/PortfolioProjects/blob/main/Data%20Cleaning%20Project.sql" class="image main"><img src="images/house.jpg" alt="" /></a>
@@ -72,7 +71,7 @@
 										COVID Data Exploration with SQL</a></h2>
 									</header>
 									<a href="https://github.com/BrainTea/PortfolioProjects/blob/main/COVID%20Portfolio%20Project.sql" class="image fit"><img src="images/covid.jpg" alt="" /></a>
-									<p>Using COVID data, I made some plots in SQL to help better understand the data and look at interesting relationships.</p>
+									<p>Utilized SQL to Create Informative Plots for COVID Data.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/BrainTea/PortfolioProjects/blob/main/COVID%20Portfolio%20Project.sql" class="button">View Project</a></li>
 									</ul>
@@ -83,7 +82,7 @@
 										Airbnb Visualizations with Tableau</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/bryan.torres7085/viz/AirBnBFullProject_16882670676880/Dashboard1?publish=yes" class="image fit"><img src="images/airbnb.jpg" alt="" /></a>
-									<p>Using Tableau, I plotted some Airbnb data to help better visualize what information was gathered.</p>
+									<p>Utilized Tableau to Create Visual Insights for Airbnb Data.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/bryan.torres7085/viz/AirBnBFullProject_16882670676880/Dashboard1?publish=yes" class="button">View Project</a></li>
 									</ul>
@@ -94,7 +93,7 @@
 										Data Professions Survey with Power Bi</a></h2>
 									</header>
 									<a href="https://github.com/BrainTea/PortfolioProjects/blob/main/Power%20Bi%20Project.pdf" class="image fit"><img src="images/dataprof.jpg" alt="" /></a>
-									<p>Using data collected from an online survey, I used Power Bi to make some helpful visualizations to easily understand the information from the survey.</p>
+									<p>Employed Power BI to Create Informative Visualizations for data from an Online Survey.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/BrainTea/PortfolioProjects/blob/main/Power%20Bi%20Project.pdf" class="button">View Project</a></li>
 									</ul>
@@ -105,7 +104,7 @@
 										BMI Calculator with Python</a></h2>
 									</header>
 									<a href="https://github.com/BrainTea/PortfolioProjects/blob/main/BMI_Calculator.py" class="image fit"><img src="images/bmi.jpeg" alt="" /></a>
-									<p>Using Python, I created a BMI Calculator that asks for your weight, height, and name to give you your BMI score.</p>
+									<p>Designed a Personalized BMI Calculator Application in Python.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/BrainTea/PortfolioProjects/blob/main/BMI_Calculator.py" class="button">View Project</a></li>
 									</ul>
@@ -116,7 +115,7 @@
 										Auto File Sorter with Python</a></h2>
 									</header>
 									<a href="https://github.com/BrainTea/PortfolioProjects/blob/main/Auto_File_Sorter.py" class="image fit"><img src="images/filesort.jpg" alt="" /></a>
-									<p>Using Python, I created a file sorting system that looks in a folder and moves each file type to their respective folders.</p>
+									<p>Developed a Python-Based File Sorting System for Efficient Data Organization.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/BrainTea/PortfolioProjects/blob/main/Auto_File_Sorter.py" class="button">View Project</a></li>
 									</ul>
@@ -127,7 +126,7 @@
 										Web Scraping with python</a></h2>
 									</header>
 									<a href="https://github.com/BrainTea/PortfolioProjects/blob/main/Amazon%20Web%20Scraper%20Project.ipynb" class="image fit"><img src="images/amazon.jpg" alt="" /></a>
-									<p>Using Python, I selected an item on Amazon and used python to create a list to track the price and listing of the item.</p>
+									<p>Utilized Python to Develop an Amazon Item Price and Listing Tracker.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/BrainTea/PortfolioProjects/blob/main/Amazon%20Web%20Scraper%20Project.ipynb" class="button">View Project</a></li>
 									</ul>
